@@ -3,6 +3,8 @@
 
 Remove the assumption that all instances of a given class have the same metaclass.
 
+Fixed the method search so that the GantBuilder object referred to by ant is checked for all closures
+declared in a target.
 
 1.3.0 (r9298, tagged as 9302)
 -----------------------------
